--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
                         <a href="#"><i class="fa fa-cogs"></i>Услуги</a>
                         <label for="sub_m2" class="toggleSubmenu"><i class="fa"></i></label>
                         <ul>
-                            <li><a href="#">Услуга 1</a></li>
-                            <li><a href="#">Услуга 2</a></li>
-                            <li><a href="#">Услуга 3</a></li>
+                            <li><a href="#">TRX - тренировки</a></li>
+                            <li><a href="#">Мужской тренинг</a></li>
+                            <li><a href="#">Тренировки для девушек</a></li>
+                            <li><a href="#">Функциональный тренинг</a></li>
+                            <li><a href="#">Групповые тренировки</a></li>
                         </ul>
                     </li>
                     
