--- a/index.html
+++ b/index.html
@@ -36,22 +36,24 @@
                     
                                         <li>
                         <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1">
-                        <a href="#"><i class="fa fa-shopping-cart"></i>Продукция</a>
+                        <a href="#"><i class="fa fa-shopping-cart"></i>Магазин</a>
                         <label for="sub_m1" class="toggleSubmenu"><i class="fa"></i></label>
                         <ul>
                             <li>
                                 <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-1">
-                                <a href="#">Одежда</a>
+                                <a href="#">Спортивное питание</a>
                                 <label for="sub_m1-1" class="toggleSubmenu"><i class="fa"></i></label>
                                 <ul>
-                                    <li><a href="#">Обувь</a></li>
-                                    <li><a href="#">Куртки</a></li>
-                                    <li><a href="#">Брюки</a></li>
+                                    <li><a href="#">Протеины</a></li>
+                                    <li><a href="#">Аминокислоты</a></li>
+                                    <li><a href="#">Гейнеры</a></li>
+                                    <li><a href="#">Креатин</a></li>
+                                    <li><a href="#">Енергетики</a></li>
                                 </ul>
                             </li>
                             <li>
                                 <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2">
-                                <a href="#">Электроника</a>
+                                <a href="#">Аксессуары</a>
                                 <label for="sub_m1-2" class="toggleSubmenu"><i class="fa"></i></label>
                                 <ul>
                                     <li><a href="#">Камеры</a></li>
