--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
                                     <li><a href="#">Енергетики</a></li>
                                 </ul>
                             </li>
+                             <ul>
+                            <li>
+                                <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-1">
+                                <a href="#">Тренеры-партнеры</a>
+                                <label for="sub_m1-1" class="toggleSubmenu"><i class="fa"></i></label>
+                                <ul>
+                                    <li><a href="#">Артем</a></li>
+                                   
+                                </ul>
+                            </li>
                             <li>
                                 <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2">
                                 <a href="#">Аксессуары</a>
@@ -60,12 +70,12 @@
                                     <li><a href="#">Компьютеры</a></li>
                                     <li>
                                         <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2-1">
-                                        <a href="#">Телефоны</a>
+                                        <a href="#">Одежда</a>
                                         <label for="sub_m1-2-1" class="toggleSubmenu"><i class="fa"></i></label>
                                         <ul>
-                                            <li><a href="#">Samsung</a></li>
-                                            <li><a href="#">Flf</a></li>
-                                            <li><a href="#">Apple</a></li>
+                                            <li><a href="#">Для женщин</a></li>
+                                            <li><a href="#">Для мужчин</a></li>
+                                            <li><a href="#">Обувь</a></li>
                                         </ul>
                                     </li>
                                 </ul>
