--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                                 <a href="#">Аксессуары</a>
                                 <label for="sub_m1-2" class="toggleSubmenu"><i class="fa"></i></label>
                                 <ul>
-                                    <li><a href="#">Камеры</a></li>
-                                    <li><a href="#">Компьютеры</a></li>
+                                    <li><a href="#">Экипировка</a></li>
+                                    <li><a href="#">Тренажеры</a></li>
                                     <li>
                                         <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2-1">
                                         <a href="#">Одежда</a>
@@ -71,7 +71,10 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Продукты питания</a></li>
+                            <li><a href="#">Тренеры-партнеры</a></li>
+                                <ul>
+                                    <li><a href="#">Артем</a></li>
+                                    <ul/>
                             <li><a href="#">Инструменты</a></li>
                             <li><a href="#">Быт. химия</a></li>
                         </ul>
