--- a/index.html
+++ b/index.html
@@ -71,14 +71,12 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Тренеры-партнеры</a></li>
-                                        <li>
-                                        <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2-1">
-                                        <a href="#">Одежда</a>
-                                        <label for="sub_m1-2-1" class="toggleSubmenu"><i class="fa"></i></label>
-                                        <ul>
-                                            <li><a href="#">Артем</a></li>
-                                            </ul>
+                            <li><a href="#">Тренеры-партнеры</a></li>                                     
+                            
+                                     <label for="sub_m2" class="toggleSubmenu"><i class="fa"></i></label>
+                                <ul>
+                                <li><a href="#">Артем</a></li>                        
+                                </ul>
                             <li><a href="#">Инструменты</a></li>
                             <li><a href="#">Быт. химия</a></li>
                         </ul>
