--- a/index.html
+++ b/index.html
@@ -71,18 +71,17 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Тренеры-партнеры</a></li>                                     
-                            
-                                     <label for="sub_m2" class="toggleSubmenu"><i class="fa"></i></label>
-                                <ul>
-                                <li><a href="#">Артем</a></li>                        
-                                </ul>
-                            <li><a href="#">Инструменты</a></li>
-                            <li><a href="#">Быт. химия</a></li>
                         </ul>
                     </li>
                     
-                    <li><a href="#"><i class="fa fa-th-list"></i>Тренеры-партнеры</a></li>
+                    <li>
+                        <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
+                        <a href="#"><i class="fa fa-cogs"></i>Тренеры-партнеры</a>
+                        <label for="sub_m2" class="toggleSubmenu"><i class="fa"></i></label>
+                        <ul>
+                            <li><a href="#">Артем</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#"><i class="fa fa-envelope-open"></i>Контакты</a></li>
                 </ul>
             </nav>
