--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                         </ul>
                     </li>
                     
-                   <li><a href="#"><i class="fa fa-envelope-open"></i>Контакты</a></li>
+                   <li><a href="#"><i class="fa fa-envelope-open"></i>Зал</a></li>
+                </ul>
+                    <li><a href="#"><i class="fa fa-envelope-open"></i>Контакты</a></li>
                 </ul>
             </nav>
 
