--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
             <nav class="dws-menu">
                 <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
-                <label for="menu" class="toggleMenu"><i class="fa fa-bars"></i>Меню</label>
+                <label for="menu" class="toggleMenu"></i>Меню</label>
                 <ul>
-                    <li><a href="#"><i class="fa fa-home"></i>Главная</a></li>
+                    <li><a href="#"></i>Главная</a></li>
 
                     <li>
                         <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
-                        <a href="#"><i class="fa fa-cogs"></i>Услуги</a>
-                        <label for="sub_m2" class="toggleSubmenu"><i class="fa"></i></label>
+                        <a href="#"></i>Услуги</a>
+                        <label for="sub_m2" class="toggleSubmenu"></i></label>
                         <ul>
                             <li><a href="#">TRX - тренировки</a></li>
                             <li><a href="#">Мужской тренинг</a></li>
@@ -36,13 +36,13 @@
                     
                                         <li>
                         <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1">
-                        <a href="#"><i class="fa fa-shopping-cart"></i>Магазин</a>
-                        <label for="sub_m1" class="toggleSubmenu"><i class="fa"></i></label>
+                        <a href="#"></i>Магазин</a>
+                        <label for="sub_m1" class="toggleSubmenu"></i></label>
                         <ul>
                             <li>
                                 <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-1">
                                 <a href="#">Спортивное питание</a>
-                                <label for="sub_m1-1" class="toggleSubmenu"><i class="fa"></i></label>
+                                <label for="sub_m1-1" class="toggleSubmenu"></i></label>
                                 <ul>
                                     <li><a href="#">Протеины</a></li>
                                     <li><a href="#">Аминокислоты</a></li>
@@ -55,14 +55,14 @@
                             <li>
                                 <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2">
                                 <a href="#">Аксессуары</a>
-                                <label for="sub_m1-2" class="toggleSubmenu"><i class="fa"></i></label>
+                                <label for="sub_m1-2" class="toggleSubmenu"></i></label>
                                 <ul>
                                     <li><a href="#">Экипировка</a></li>
                                     <li><a href="#">Тренажеры</a></li>
                                     <li>
                                         <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2-1">
                                         <a href="#">Одежда</a>
-                                        <label for="sub_m1-2-1" class="toggleSubmenu"><i class="fa"></i></label>
+                                        <label for="sub_m1-2-1" class="toggleSubmenu"></i></label>
                                         <ul>
                                             <li><a href="#">Для женщин</a></li>
                                             <li><a href="#">Для мужчин</a></li>
@@ -74,10 +74,10 @@
                         </ul>
                     </li>
                 <ul> 
-                   <li><a href="#"><i class="fa fa-envelope-open"></i>Зал</a></li>
+                   <li><a href="#"></i>Тренеры-партнеры</a></li>
                 </ul>
                 <ul>
-                    <li><a href="#"><i class="fa fa-envelope-open"></i>Контакты</a></li>
+                    <li><a href="#"></i>Контакты</a></li>
                 </ul>
             </nav>
 
