--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="#"></i>Услуги</a>
                         <label for="sub_m2" class="toggleSubmenu"></i></label>
                         <ul>
-                            <li><a href="#">TRX - тренировки</a></li>
+                            <li><a href="block.html">TRX - тренировки</a></li>
                             <li><a href="#">Мужской тренинг</a></li>
                             <li><a href="#">Тренировки для девушек</a></li>
                             <li><a href="#">Функциональный тренинг</a></li>
