--- a/block.html
+++ b/block.html
@@ -96,17 +96,12 @@
                 <p>
                     <h2>Персональный тренер в Киеве</h2>
 
-                    Здравствуйте! <br> Меня зовут Аркадий, я персональный тренер.<br> Хочу немного рассказать о себе. Ведь такое предварительное знакомство позволяет ощутить доверие к тренеру, убедиться в его квалифицированности и в том, что Вас приведут
-                    к тому результату которого Вы хотите! Я опишу здесь свои профессиональные навыки, сертификаты и дипломы, а также расскажу о том, почему я люблю свою профессию.
-
-                    <h2>Каким должен быть именно Ваш тренер?</h2>
-                    Тело является нашим первым домом. Наше физическое состояние сильно сказывается на психологическом самовосприятии и отношении к себе. В теле можно чувствовать себя комфортно, уверенно, подвижно, дерзко, заряженно или же испытывать неуют, комплексы, стесняться
-                    своего тела. Выбор тренера-это скорее следствие Вашего стремления что-то изменить в себе. И в зависимости от того что вы хотите изменить и должен основываться Ваш выбор. Например, учитывая каким видом спорта тренер занимался ранее
-                    не сложно спрогнозировать какие результаты Вы получите. Так же, обращайте внимание не только на профессиональные, а и на личностные качества. Человек, с которым Вам комфортно проводить время способен незаметно и быстро привести к большим
-                    достижениям и тренировки будут в удовольствие. Тренер должен быть в меру жосток, придерживаясь тренировочного плана и уметь реально оценить Ваши возможности, учитывать противопоказания, чтобы нагрузки были адекватны Вашему уровню физической
-                    подготовленности, готовности тела к нагрузкам и не навредить.<br>
-                    <br> Тренер должен быть квалифицированным специалистом-практиком, со зананием анатомии, физиологии, биомеханики человеческого тела, диетологии, основ психологии, уметь тактично общаться в дружественной форме и быть проводником в мир
-                    спорта за которым хотелось бы следовать.
+                    	<h1>TRX - тренировки<h1> <h2>Тренировки с использованием петель trx<h2>
+                    Изначально тренажер TRX был придуман для спортсменов среднего и выше среднего уровня подготовки, 
+                            но он станет отличным инструментом и для начинающих. 
+                            Компактный, переносной, дает возможность тренироваться где угодно. 
+                            Тренажер TRX предназначен для развития баланса, выносливости, ловкости, скорости, гибкости, отлично подтягивает, сушит и формирует тело. 
+                            <br>Стоимость тренировки 350грн Стоимость оплаты пакета из 10 тренировок / 3000грн
                 </p>
             </div>
         </div>
