--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </ul>
                     </li>
                 <ul> 
-                   <li><a href="#"></i>Тренеры-партнеры</a></li>
+                   <li><a href="#"></i>Партнеры</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"></i>Контакты</a></li>
