--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спортивный блог</title>
     <link href="block.css" rel="stylesheet" />
+    <link href="font.css" rel="stylesheet" />
 </head>
 
 <body>
