--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спортивный блог</title>
     <link href="block.css" rel="stylesheet" />
-    <link href="font.css" rel="stylesheet" />
+    <link href="//db.onlinewebfonts.com/c/1e6ec96c95301fa73aa1d026f161a269?family=MarzoW00-Regular" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
