--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
                 </div>
 
                 <div class="finish-right">
-                    <P>Телефон для записи:<br> tel: +38 063 858 73 78<br> Viber: +38 093 580 96 69<br></P>
+                    <P>Телефон для записи:<br> tel: +38 063 858 73 78<br>
+                        <a href="https://wa.me/+79779886018?text=Здравствуйте.%20Вопрос%20по%20поводу%20продвижения.">Написать в WhatsApp</a><br>
+                        Viber: +38 093 580 96 69<br></P>
                 </div>
             </div>
         </div>
