--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 
                 <div class="finish-right">
                     <P>Телефон для записи:<br> tel: +38 063 858 73 78<br>
-                        <a href="https://wa.me/+79779886018?text=Здравствуйте.%20Вопрос%20по%20поводу%20продвижения.">Написать в WhatsApp</a><br>
+                        <a href="https://wa.me/79779886018">Написать в WhatsApp</a><br>
+                        <a href="viber://add?number=380935809669">Написать в Viber</a>
+
                         Viber: +38 093 580 96 69<br></P>
                 </div>
             </div>
