--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спортивный блог</title>
     <link href="block.css" rel="stylesheet" />
-    <link href="font.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -17,11 +15,14 @@
 
 
 
+
             <nav class="dws-menu">
                 <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
                 <label for="menu" class="toggleMenu"></i>Меню</label>
                 <ul>
-                    <li><a href="#"></i>Главная</a></li>
+                    <li>
+                        <a href="index.html"></i>Главная</a>
+                    </li>
 
                     <li>
                         <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
@@ -29,58 +30,62 @@
                         <label for="sub_m2" class="toggleSubmenu"></i></label>
                         <ul>
                             <li><a href="block.html">TRX - тренировки</a></li>
-                            <li><a href="#">Мужской тренинг</a></li>
-                            <li><a href="#">Тренировки для девушек</a></li>
-                            <li><a href="#">Функциональный тренинг</a></li>
-                            <li><a href="#">Групповые тренировки</a></li>
+                            <li><a href="men.html">Мужской тренинг</a></li>
+                            <li><a href="women.html">Тренировки для девушек</a></li>
+                            <li><a href="functional.html">Функциональный тренинг</a></li>
+                            <li><a href="group">Групповые тренировки</a></li>
                         </ul>
                     </li>
-                    
-                                        <li>
+
+                    <li>
                         <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1">
                         <a href="#"></i>Магазин</a>
                         <label for="sub_m1" class="toggleSubmenu"></i></label>
                         <ul>
                             <li>
                                 <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-1">
-                                <a href="#">Спортивное питание</a>
+                                <a href="nutrition">Спортивное питание</a>
                                 <label for="sub_m1-1" class="toggleSubmenu"></i></label>
                                 <ul>
-                                    <li><a href="#">Протеины</a></li>
-                                    <li><a href="#">Аминокислоты</a></li>
-                                    <li><a href="#">Гейнеры</a></li>
-                                    <li><a href="#">Креатин</a></li>
-                                    <li><a href="#">Енергетики</a></li>
+                                    <li><a href="proteins">Протеины</a></li>
+                                    <li><a href="amino">Аминокислоты</a></li>
+                                    <li><a href="gainers">Гейнеры</a></li>
+                                    <li><a href="creatin">Креатин</a></li>
+                                    <li><a href="energetics">Енергетики</a></li>
                                 </ul>
                             </li>
-                            
+
                             <li>
                                 <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2">
                                 <a href="#">Аксессуары</a>
                                 <label for="sub_m1-2" class="toggleSubmenu"></i></label>
                                 <ul>
-                                    <li><a href="#">Экипировка</a></li>
-                                    <li><a href="#">Тренажеры</a></li>
+                                    <li><a href="equipment">Экипировка</a></li>
+                                    <li><a href="simulators">Тренажеры</a></li>
                                     <li>
                                         <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2-1">
                                         <a href="#">Одежда</a>
                                         <label for="sub_m1-2-1" class="toggleSubmenu"></i></label>
                                         <ul>
-                                            <li><a href="#">Для женщин</a></li>
-                                            <li><a href="#">Для мужчин</a></li>
-                                            <li><a href="#">Обувь</a></li>
+                                            <li><a href="for women">Для женщин</a></li>
+                                            <li><a href="for men">Для мужчин</a></li>
+                                            <li><a href="shoes">Обувь</a></li>
                                         </ul>
                                     </li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
-                <ul> 
-                   <li><a href="#"></i>Партнеры</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#"></i>Контакты</a></li>
-                </ul>
+                    <ul>
+                        <li>
+                            <a href="partners.html"></i>Партнеры</a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <a href="contacts.html"></i>Контакты</a>
+                        </li>
+                    </ul>
             </nav>
 
 
@@ -89,9 +94,14 @@
 
 
 
+
+
+        </div>
+        <div class="gray-block">
             <div class="name">ARKADIY_GYM</div>
             <h1>FITNES BLOG & STORE</h1>
         </div>
+
     </header>
 
 
@@ -127,10 +137,7 @@
                 </div>
 
                 <div class="finish-right">
-                    <P>Телефон для записи:<br> tel: +38 063 858 73 78<br>
-                        <a href="https://wa.me/79779886018">Написать в WhatsApp</a><br>
-                        <a href="viber://add?number=380935809669">Написать в Viber</a>
-                        </P>
+                    <P>Телефон для записи:<br> tel: +38 063 858 73 78<br> Viber: +38 093 580 96 69<br></P>
                 </div>
             </div>
         </div>
