--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <div id="content">
         <div class="coach d-flex justify-content-around">
-            <img class="photo" src="4m.png" alt="персональный тренер Киев 0638587378">
+            <img class="photo" src="img/4m.png" alt="персональный тренер Киев 0638587378">
             <!-- TODO after before pseudo elements -->
 
             <div class="kdb">
