--- a/contacts.html
+++ b/contacts.html
@@ -105,10 +105,13 @@
 
 
 
-
+        </div>
+        <div class="gray-block">
             <div class="name">ARKADIY_GYM</div>
             <h1>FITNES BLOG & STORE</h1>
         </div>
+
+
     </header>
 
 
