--- a/index.html
+++ b/index.html
@@ -140,16 +140,22 @@
             </div>
         
         </div>
-        <div id="footer">
-            <div class="finish d-flex justify-content-around">
+           <div id="footer">
+        <div class="finish d-flex justify-content-around">
 
-                <div class="finish-left">
-                    <p>Принимаю по адресу: <br> ул. Довнар-запольского 9/10</p>
-                </div>
-
-                <div class="finish-right">
-                    <P>Телефон для записи:<br> tel: +38 063 858 73 78<br> Viber: +38 093 580 96 69<br></P>
-                </div>
-            </div>
+            <p>Принимаю по адресу: <br> ул. Довнар-Запольского 9/10</p> tel: 0638587378
         </div>
+
+
+        <div class="icons">
+            <a href="viber:+380635809669">
+                <img class="viber" src="./icons/Viber.png" alt="+380935809669"></a>
+            <a href="whatsapp:+79779886018">
+                <img class="whatsapp" src="./icons/WhatsApp.png" alt="+79779886018"></a>
+            <a href="tel:+380638587378">
+                <img class="tel" src="./icons/tel.png" alt="+380638587378">
+            </a>
+        </div>
+    </div>
+
 </body>
