--- a/contacts.html
+++ b/contacts.html
@@ -139,7 +139,7 @@
         <div id="footer">
         
         <div class="icons">
-            <a href="viber:+380635809669">
+            <a href="viber://add?number=380635809669">
                 <img class="viber" src="/icons/Viber.png" alt="+380935809669"></a>
             <a href="whatsapp:+79779886018">
                 <img class="whatsapp" src="/icons/WhatsApp.png" alt="+79779886018"></a>
