--- a/contacts.html
+++ b/contacts.html
@@ -141,7 +141,7 @@
         <div class="icons">
             <a href="viber://add?number=380635809669">
                 <img class="viber" src="/icons/Viber.png" alt="+380935809669"></a>
-            <a href="whatsapp:+79779886018">
+            <a href="https://api.whatsapp.com/send?phone=79779886018">
                 <img class="whatsapp" src="/icons/WhatsApp.png" alt="+79779886018"></a>
             <a href="tel:+380638587378">
                 <img class="tel" src="/icons/tel.png" alt="+380638587378">
