--- a/contacts.html
+++ b/contacts.html
@@ -139,10 +139,10 @@
         <div id="footer">
         
         <div class="icons">
-            <a href="viber://add?number=380635809669">
-                <img class="viber" src="/icons/Viber.png" alt="+380935809669"></a>
-            <a href="https://api.whatsapp.com/send?phone=79779886018">
-                <img class="whatsapp" src="/icons/WhatsApp.png" alt="+79779886018"></a>
+            <a href="viber:+380935809669">
+                <img class="viber" src="./icons/Viber.png" alt="+380935809669"></a>
+            <a href="whatsapp:+79779886018">
+                <img class="whatsapp" src="./icons/WhatsApp.png" alt="+79779886018"></a>
             <a href="tel:+380638587378">
                 <img class="tel" src="/icons/tel.png" alt="+380638587378">
             </a>
