--- a/contacts.html
+++ b/contacts.html
@@ -140,11 +140,11 @@
         
         <div class="icons">
             <a href="viber:+380935809669">
-                <img class="viber" src="./icons/Viber.png" alt="+380935809669"></a>
+                <mg class="viber" src="./icons/Viber.png" alt="+380935809669"></a>
             <a href="whatsapp:+79779886018">
                 <mg class="whatsapp" src="./icons/WhatsApp.png" alt="+79779886018"></a>
             <a href="tel:+380638587378">
-                <mg class="tel" src="/icons/tel.png" alt="+380638587378">
+                <img class="tel" src="/icons/tel.png" alt="+380638587378">
             </a>
         </div>
     </div>
