--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         </div>
         <div class="gray-block">
-            <div class="name">fizkult_privet</div>
+            <div class="name">ARKADIY_GYM</div>
             <h1>FITNES BLOG & STORE</h1>
         </div>
 
