--- a/contacts.html
+++ b/contacts.html
@@ -35,6 +35,7 @@
                             <li><a href="block.html">TRX - тренировки</a></li>
                             <li><a href="men.html">Мужской тренинг</a></li>
                             <li><a href="women.html">Тренировки для девушек</a></li>
+                            <li><a href="pt.home.html">Тренер на дом</a></li>
                             <li><a href="functional.html">Функциональный тренинг</a></li>
                             <li><a href="group">Групповые тренировки</a></li>
                         </ul>
