--- a/pt.home.html
+++ b/pt.home.html
@@ -34,7 +34,7 @@
                 <a href="#"></i>Услуги</a>
                 <label for="sub_m2" class="toggleSubmenu"></i></label>
                 <ul>
-                    <li><a href="block.html">TRX - тренировки</a></li>
+                    <li><a href="TRX.html">TRX - тренировки</a></li>
                     <li><a href="men.html">Мужской тренинг</a></li>
                     <li><a href="women.html">Тренировки для девушек</a></li>
                     <li><a href="pt.home.html">Тренер на дом</a></li>
