--- a/women.html
+++ b/women.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta name=”robots” content=”noindex, follow”> /*Запрет индексации для поисковых роботов*/
+    <meta name=”robots” content=”noindex, follow”> //Запрет индексации для поисковых роботов//
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спортивный блог</title>
