--- a/pt.home.html
+++ b/pt.home.html
@@ -132,11 +132,11 @@
                     <h2>Персональный тренер на дом</h2> - это совершенно новая услуга на рынке фитнеса. Теперь Вы и Ваша семья можете заниматься фитнесом под руководством персонального тренера у себя дома, в офисе, на даче или в загородном коттедже! В любое
                     удобное для Вас время!
                     <h2>Персональный тренер на дом</h2> - это идеальное решение если: <br>Вы давно хотите всерьёз заняться фитнесом, но у Вас катастрофически не хватает времени; <br>Ваш образ жизни не вписывается ни в одно расписание фитнес-клуба; <br>Вы
-                    живёте в загородном доме и не имеете возможность посещать фитнес-центр; <br>У Вас родился ребёнок и теперь нет возможности посещать тренировки в спорт-клубе; <br>Вы не хотите возить детей по пробкам в другой конец Киева или вовсе живете
-                    загородом; <br>Вы хотите с экономить время, нервы и здоровье;
-                    <br>С Персональным тренером на дому, Вы обеспечите максимальную эффективность занятий, тогда как занятия в зале, в группе невсегда дают желаемый результат и часто не дают результата вовсе, а сил и времени отбирают очень много! С персональным
-                    тренером все усилия, приложенные Вами к тренировке, идут на пользу! <br>Воспользовавшись услугой
-                    <h2>тренер на дом</h2>, Вы платите только за тренировки, а для занятий в фитнес-клубе Вам необходимо приобретать абонемент.
+                    живёте в загородном доме и не имеете возможность посещать фитнес-центр; <br>Дома маленькие дети и теперь нет возможности посещать тренировки в спорт-клубе; <br>У Вас трудности с передвижением по городу;
+                    <br>Вы хотите с экономить время, нервы и здоровье;
+                    <br>С Персональным тренером на дому, Вы обеспечите максимальную эффективность занятий! Под наблюдением личного тренера
+                    все усилия, приложенные Вами к тренировке, идут на пользу! <br>Воспользовавшись услугой
+                    <h2>тренер на дом</h2>, Вы платите только за тренировки, а для занятий в фитнес-клубе Вам приходится так же приобретать абонемент.
 
                 </p>
             </div>
